<resources>
    <string name="app_name">UGI</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="register">ĐĂNG KÍ</string>
    <string name="quenMatKhau">Quên mật khẩu ?</string>
    <string name="facebook_app_id">290466984669174</string>
    <string name="google_plus_client">494997825728-1lib1v616hk8vg8mc62qbok0a619mc80.apps.googleusercontent.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="themBanThanhCong">Thêm bàn thành công</string>
    <string name="SuaBanThanhCong">Sửa bàn thành công</string>
    <string name="title_bar_capnhatnguoidung">Cập Nhật Người Dùng</string>
    <string name="themBan">Thêm Bàn</string>
    <string name="xoaBanThanhCong">Xoá bàn thành công !</string>
    <string name="NhapGia">Nhập giá</string>
    <string name="GiaLaSoDuong">Giá là số nguyên dương</string>
    <string name="NhapTenMon">Nhập tên món</string>
    <string name="TenMonTonTai">Tên món đã tồn tại</string>
    <string name="QuanCaPhe">Quán cà phê</string>
    <string name="QuanTraSua">Quán trà sữa</string>
    <string name="QuanNuoc">Quán nước</string>
    <string name="QuanKhac">Quán khác</string>
    <string name="ChonLogoNhaHang">Chọn logo nhà hàng :</string>
    <string name="SoDienThoai">Số điện thoại</string>
    <string name="DiaChi">Địa chỉ</string>
    <string name="TenCuaHang">Tên cửa hàng</string>
    <string name="ThemTuDanhSachCoSan">Thêm từ danh sách có sẵn</string>
    <string name="ThemMoi">Thêm mới</string>
    <string name="ThemTheoLoaiMon">Thêm theo loại món có sẵn</string>
    <string name="ChonHinhAnhMonAn">Chọn hình ảnh món ăn</string>
    <string name="BanCanGoiMon">Bàn Cần gọi món</string>
    <string name="xacNhan">Xác Nhận</string>
    <string name="huy">Hủy</string>
    <string name="goiMon">Gọi Món</string>
    <string name="them">Thêm</string>
    <string name="tienPhatSinh">Tiền Phát sinh</string>
    <string name="GhiChu">Ghi Chú</string>
    <string name="thongbaorong">Chưa có món nào trong danh sách</string>
    <string name="thoat">Thoát</string>
    <string name="thanhtoan">Thanh Toán</string>
    <string name="huyban">Hủy Bàn</string>
    <string name="bancangoimon">bàn cần gọi món !</string>
    <string name="monkhongtontaitrongthucdon">Món không tồn tại trong thực đơn !</string>
    <string name="tienthemkhonghople">Tiền Thêm không hợp lệ !</string>
    <string name="tienthemkhongduocle">Tiền Thêm phải lớn hơn 1000!</string>
    <string name="soluong">Số Lượng :</string>
    <string name="thanhtien">"Thành tiền : "</string>
    <string name="goimon">Gọi Món</string>
    <string name="chuyenban">Chuyển bàn</string>
    <string name="tongtien">Tổng tiền :</string>
    <string name="donvitien">VNĐ</string>
    <string name="tienthoilai">Tiền Thối Lại</string>
    <string name="tinhtien">TÍNH TIỀN</string>
    <string name="tienmat">Tiền mặt</string>
    <string name="nhapLaiNgaySinh">Nhập lại ngày sinh</string>
    <string name="quanly">Quản lý</string>
    <string name="nhanvien">Nhân viên</string>
    <string name="nhaplaiemail">Nhập lại email</string>
    <string name="emailtontai">Email đã tồn tại</string>
    <string name="nhapmatkhau">Nhập  mật khẩu</string>
    <string name="nhaplaimatkhau">Nhập lại mật khẩu</string>
    <string name="matkhaukhongtrungkhop">Mật khẩu không trùng khớp</string>
    <string name="nhaplaisodienthoai">Nhập lại số điện thoại !</string>
    <string name="sodtdatontai">" số điện thoại đã tồn tại!"</string>
    <string name="chophepdangnhap">cho phép đăng nhập bằng facebook hoặc google</string>


    <!--REQUEST NUMBER -->
    <integer name="request_chonLogoCuaHang">80</integer>
    <integer name="request_themCuaHang">90</integer>
    <integer name="request_themLoaiMon">100</integer>
    <integer name="request_chon_hinhanh_monan">101</integer>
    <integer name="request_goiMon">6</integer>
    <integer name="request_suaMonAn">7</integer>
    <integer name="request_xoaMonAn">8</integer>
    <integer name="request_suaBanAn">9</integer>
    <integer name="request_themBanNhanh">10</integer>
    <integer name="request_themLoaiMonVaoThucDon">11</integer>
    <integer name="request_ThemMonMoi">12</integer>

    <!--array String slide menu-->
    <array name="nav_drawer_title">
        <item>Gọi Món</item>
        <item>Thực đơn</item>
        <item>Bàn</item>
        <item>Người dùng</item>
        <item>Cửa Hàng</item>
        <item>Thống kê</item>
    </array>
    <!--array icon slide menu -->
    <array name="nav_drawer_icon">
        <item>@drawable/ic_order_food</item>
        <item>@drawable/ic_menu_food</item>
        <item>@drawable/ic_table</item>
        <item>@drawable/ic_people_outline</item>
        <item>@drawable/ic_shop</item>
        <item>@drawable/ic_bar_chart</item>
    </array>

</resources>
