<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_goi_mon"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="dang.ugi.com.view.GoiMon.GoiMonActivity"
    android:padding="10dp">
      <android.support.design.widget.TextInputLayout
          android:id="@+id/layout_validate_goimon_autocomplete_TenBan"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <AutoCompleteTextView
              android:hint="@string/BanCanGoiMon"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/autocomplete_danggoimon_tenban"
              android:imeOptions="actionSearch"
              style="@android:style/Widget.Holo.AutoCompleteTextView"
              android:popupBackground="@color/colorPrimary"
              android:layout_margin="5dp"
              android:padding="10dp"
              android:focusable="false"
              android:dropDownHeight="wrap_content"
              android:layout_marginTop="10dp"
              android:dropDownSelector="@color/colorPrimary" />
      </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btn_danggoimon_themMon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goiMon"
            android:layout_below="@+id/layout_validate_goimon_autocomplete_TenBan"
            android:background="@color/colorPrimary"
            android:layout_marginRight="5dp"
            android:textColor="@color/cardview_light_background"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="180dp">
           <!-- <ScrollView
                android:id="@+id/scrollView_danhSachMonDaGoi"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="200dp">-->
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_danggoimon_listMonDangGoi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_margin="5dp"

                    />

         <!--   </ScrollView>-->
            <TextView
                android:id="@+id/textview_DangGoiMon_thongbaorong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thongbaorong"
                android:layout_below="@+id/scrollView_danhSachMonDaGoi"
                android:textStyle="normal|bold"
                android:textSize="18sp"
                android:visibility="gone"
                android:gravity="center_vertical|center_horizontal" />
        </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_validate_goimon_TienThem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview_DangGoiMon_thongbaorong"
                >

            </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|end">
        <TextView
            android:id="@+id/textview_DangGoiMon_TongTienlabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tongtien"
            android:layout_below="@+id/layout_validate_goimon_TienThem"
            android:textStyle="normal|bold|italic"
            android:textSize="16sp"
            android:padding="5dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp" />
        <TextView
            android:id="@+id/textview_DangGoiMon_TongTien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_below="@+id/layout_validate_goimon_TienThem"
            android:textColor="@color/colorButtonLoginGoogle"
            android:textStyle="normal|bold|italic"
            android:textSize="16sp"
            android:padding="5dp"
            android:focusable="false"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp" />

        <TextView
            android:id="@+id/textview_DangGoiMon_DonViTien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="VND"
            android:layout_below="@+id/layout_validate_goimon_TienThem"
            android:textColor="@color/colorButtonLoginGoogle"
            android:textStyle="normal|bold|italic"
            android:textSize="16sp"
            android:padding="5dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/layout_danggoimon_button"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_danggoimon_ghichu"
            android:gravity="fill_vertical|center_horizontal"
            android:padding="5dp">
            <Button
                android:id="@+id/btn_danggoimon_xacNhan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xacNhan"
                android:background="@color/colorPrimary"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:freezesText="false"
                android:layout_gravity="center_vertical|center_horizontal"
                android:textColor="@color/cardview_light_background" />
            <Button
                android:id="@+id/btn_danggoimon_ThanhToan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thanhtoan"
                android:background="@color/colorPrimary"
                android:layout_marginRight="5dp"
                android:visibility="gone"
                />
            <Button
                android:id="@+id/btn_danggoimon_thoat"
                android:text="@string/thoat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorButtonLogin"
                android:textColor="@color/cardview_light_background"
                android:layout_marginRight="5dp" />
            <Button
                android:id="@+id/btn_danggoimon_huy"
                android:text="@string/huy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorButtonLogin"
                android:textColor="@color/cardview_light_background" />
        </LinearLayout>


</LinearLayout>
