<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_them_CuaHang"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:weightSum="1">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_layout_TenCuaHang"
            >
           <dang.ugi.com.customView.customEdittextEmail
               android:id="@+id/editTextTenCuaHang"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/TenCuaHang"
               android:padding="5dp" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_layout_DiaChiCuaHang"
            >

            <dang.ugi.com.customView.customEdittextEmail
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editextDiaChiCuaHang"
                android:layout_gravity="center_horizontal"
                android:hint="@string/DiaChi"
                android:textColor="@color/colorTextHint"
                android:padding="5dp" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_layout_SoDienthoaiCuaHang"
            >

            <dang.ugi.com.customView.customEdittextEmail
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edittextSoDienThoaiCuaHang"
                android:layout_gravity="center_horizontal"
                android:hint="@string/SoDienThoai"
                android:textColor="@color/colorTextHint"
                android:padding="5dp" />
        </android.support.design.widget.TextInputLayout>
        <Spinner
            android:id="@+id/spinnerLoaiCuaHang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
            android:animateLayoutChanges="?attr/isLightTheme"
            android:gravity="center_vertical|fill_vertical|fill_horizontal|start"
            tools:background="@color/colorText"
            android:background="@color/cardview_shadow_end_color"></Spinner>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/ChonLogoNhaHang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/imageViewLogoCuaHang"
                android:layout_width="158dp"
                android:layout_height="120dp"
                android:layout_weight="0.80"
                android:src="@drawable/logo_default"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:measureWithLargestChild="false">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lưu"
                android:id="@+id/btnThemCuaHang"
                android:padding="10dp"
                android:textColor="#FFFF"
                android:background="@color/colorButtonLogin"
                android:textSize="15sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thoát"
                android:id="@+id/btnThoatThemCuaHang"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:layout_marginLeft="20dp"
                android:textColor="#FFFF"
                android:background="@color/colorButtonLogin"
                android:textSize="15sp" />
        </LinearLayout>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>